--- a/index.html
+++ b/index.html
@@ -6,10 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <div class="header">
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1>Let’s Help Those Who Are
+            More In Need</h1>
+        <br>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+            deterruisset. No duo populo animal noluisse, enim</p>
+    </div>
+    </div>
+    </div>
 </body>
 
 </html>
