--- a/index.html
+++ b/index.html
@@ -11,17 +11,13 @@
 
 <body>
     <div class="header">
-        <br>
-        <br>
-        <br>
-        <br>
-        <h1>Let’s Help Those Who Are
-            More In Need</h1>
-        <br>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-            deterruisset. No duo populo animal noluisse, enim</p>
-    </div>
-    </div>
+        <div class="ttext">
+            <h1>Let’s Help Those Who Are
+                More In Need</h1>
+            <br>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
     </div>
 </body>
 
