--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <div class="ttext">
             <h1>Let’s Help Those Who Are
                 More In Need</h1>
-            <br>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
                 deterruisset. No duo populo animal noluisse, enim</p>
+            <br>
+            <br>
+            <a class="btn" href="https://www.gofundme.com/" target="_blank">Donote Now!</a>
         </div>
     </div>
 </body>
