--- a/index.html
+++ b/index.html
@@ -21,6 +21,74 @@
             <a class="btn" href="https://www.gofundme.com/" target="_blank">Donote Now!</a>
         </div>
     </div>
+    <div class="mid">
+        <h1>Donate Today</h1>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+            deterruisset. No duo populo animal noluisse, enim</p>
+    </div>
+    <section class="secdon"> <button class="donatebtn"> 100 TAKA </button> <button class="donatebtn"> 200 TAKA
+        </button> <button class="donatebtn"> 300 TAKA </button> <button class="donatebtn"> 400 TAKA </button> <button
+            class="donatebtn"> 1 BITCOIN </button> <br> <br>
+        <form action="/action_page.php">
+            <label for="quantity">Other Amount [Big Amount] </label>
+            <input type="number" id="quantity" name="quantity" min="10000" max="100000000"> <br> <br>
+            <a class="btn" href="https://www.gofundme.com/" target="_blank">Donote Now!</a>
+        </form>
+    </section>
+    <br>
+    <div class="mid">
+        <h1>Our Donate Plan</h1>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+            deterruisset. No duo populo animal noluisse, enim</p>
+    </div>
+    <section class="expoloar_area">
+        <div class="food">
+            <img src="images/food.png">
+
+            <h1>Food for a family</h1>
+
+            <p>Amet minim mollit non deserunt
+                ullamco est sit aliqua dolor do amet
+                sint. Velit officia consequat duis enim
+                velit mollit.</p>
+        </div>
+        <div class="shelter">
+            <img src="images/shelter.png">
+
+            <h1>Shelter for a family</h1>
+            <p>Amet minim mollit non deserunt
+                ullamco est sit aliqua dolor do amet
+                sint. Velit officia consequat duis enim
+                velit mollit</p>
+        </div>
+        <div class="frame">
+            <img src="images/Frame-1.png">
+
+            <h1>Education for a child</h1>
+            <p>Amet minim mollit non deserunt
+                ullamco est sit aliqua dolor do amet
+                sint. Velit officia consequat duis enim
+                velit mollit.</p>
+        </div>
+    </section>
+    <section class="body">
+        <div class="bodiv">
+            <h1>Their lives depend on
+                your donation</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit
+                referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim
+                Lorem ipsum dolor sit amet, usu cu esse possit
+                referrentur, at eam falli deterruisset</p>
+            <br>
+            <br>
+            <a class="btn" href="https://support.gofundme.com/hc/en-us/articles/360001992827-How-to-make-a-donation"
+                target="_blank">How To Donate ? </a>
+        </div>
+        <div class="bodiv"><img src="images/body1.jpg"></div>
+    </section>
+
+
 </body>
 
 </html>
