--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WELCOME ON DONATE NOW BY ASIF IQBAL RIFAT</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,8 +14,8 @@
         <div class="ttext">
             <h1>Let’s Help Those Who Are
                 More In Need</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                deterruisset. No duo populo animal noluisse, enim</p>
+            <p>The only donation platform you need to improve your donor experience, simplify your processes, and
+                increase revenue.</p>
             <br>
             <br>
             <a class="btn" href="https://www.gofundme.com/" target="_blank">Donote Now!</a>
@@ -41,7 +41,7 @@
         <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
             deterruisset. No duo populo animal noluisse, enim</p>
     </div>
-    <section class="expoloar_area">
+    <section class="area">
         <div class="food">
             <img src="images/food.png">
 
@@ -85,10 +85,45 @@
             <a class="btn" href="https://support.gofundme.com/hc/en-us/articles/360001992827-How-to-make-a-donation"
                 target="_blank">How To Donate ? </a>
         </div>
+        <div class="bodiv"><img src="images/body2.jpg"></div>
+    </section>
+    <section class="body">
+        </div>
         <div class="bodiv"><img src="images/body1.jpg"></div>
+        <div class="bodiv">
+            <h1>Their lives depend on
+                your donation</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit
+                referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim
+                Lorem ipsum dolor sit amet, usu cu esse possit
+                referrentur, at eam falli deterruisset</p>
+            <br>
+            <br>
+            <a class="btn" href="https://support.gofundme.com/hc/en-us/articles/360001992827-How-to-make-a-donation"
+                target="_blank">How To Donate ? </a>
+
     </section>
 
-
+    <section class="secdon">
+        <h1>Get My Updates</h1>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur,<br> at eam falli
+            deterruisset.</p>
+        <div class="email">
+            <form action="#">
+                <input class="email-input" type="email" placeholder="   Email"><button class="subscribe-btn"><a
+                        href="#">Subscribe</a></button>
+            </form>
+        </div>
+    </section>
 </body>
+<footer>
+    <div class="footer">
+        <h2>
+            <br> <span class="humble">Be Humble And Keep Learning</span>
+        </h2>
+        <p>WAGMI - WE ALL GONNA MAKE IT</p>
+    </div>
+</footer>
 
 </html>
